--- a/index.html
+++ b/index.html
@@ -24,7 +24,13 @@
         <br />
         <br />
         <center>
-            <embed src="C:\Users\davys\Desktop\website\2022 Resume pdf.pdf" width="1200" height="800" />
+            <style>
+                #myPDF{
+                    width: 85%;
+                    height: 975px;
+                }
+            </style>
+            <iframe id="myPDF" src="C:\Users\davys\Desktop\website\2022 Resume pdf.pdf" frameborder="0"></iframe>
         </center>
 
         <p>
